# PSRJ0030

./: .gitattributes  .gitignore  3.js  Cargo.toml  README.md  dipole.js  dipole_vs_quad.html  ffe.html  ffe.js  field_explorer.html  fieldlines.js  index.html
css/: fullscreen.css  style.css
data/: lines_closed.json  lines_open.json
js/: code.js  ffe.js  fieldline.js
shaders/: volume.frag.glsl
src/: lib.rs  vec3.rs
website/: package.json  webpack.config.js
website/src/: code.js  ffe.js  fieldline.js  fieldline_new.js
